@@ -1,10 +1,11 @@
 CHANGELOG
 
 UNRELEASED
-    * test suite
+    * test suite, including request strategy test suite
     * IE10 should now behave as a CORS supported XMLHttpRequest browser, as it is
     * running tests on many browsers, using saucelabs
-    * small refactor around `_makeXmlHttpRequestByHost`
+    * refactor around `_makeXmlHttpRequestByHost` and `_makeJsonpRequestByHost`
+    * remove unused opts.callback(retry, success, obj, message) in all make..Request functions
 
 2015-02-03  2.9.2
     * Fixed calls to `.search(function() {})`, `.search(null, function() {})`, `.search(undefined, function() {})
